Modified DataAccessObject file.